# starmatrix

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  exp  intergalactic.py  params.json  params.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  tests.yml
docs/: conf.py  configuration.rst  credits.rst  index.rst  input_params.rst  installation.rst  output_files.rst  testing_edge.rst  usage.rst
github  /: FUNDING.yml
intergalactic/: abundances.py  constants.py  elements.py  functions.py  imfs.py  matrix.py  model.py  settings.py
paper/: paper.bib  paper.md
src/intergalactic/: __init__.py  abundances.py  cli.py  constants.py  dtds.py  elements.py  functions.py  imfs.py  matrix.py  model.py  settings.py
src/intergalactic/sample_input/: params.yml
src/intergalactic/tests/: test_abundances.py  test_cli.py  test_dtds.py  test_elements.py  test_functions.py  test_imfs.py  test_matrix.py  test_model.py  test_settings.py
src/starmatrix/: __init__.py  cli.py  constants.py  dtds.py  functions.py  imfs.py  matrix.py  model.py  settings.py  supernovae.py
src/starmatrix/sample_input/: expelled_elements  params.yml
src/starmatrix/tests/: test_abundances.py  test_cli.py  test_dtds.py  test_elements.py  test_functions.py  test_imfs.py  test_matrix.py  test_model.py  test_settings.py  test_supernovae.py
src/starmatrix/tests/dtds/: test_strolger.py
