[project]
name = "starmatrix"
dynamic = ["version"]
authors = [
    {name = "Juanjo Bazán", email = "hello@juanjobazan.com"},
]
maintainers = [
    {name = "Juanjo Bazán"},
]
description = "Modelling nucleosynthesis of galactic chemical elements using Q-Matrices"
keywords = ["galaxies", "models", "astrophysics"]
readme = "README.rst"
# This is metadata that pip reads to understand what Python versions your package supports
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "pyyaml>=5.4.1",
    "numpy>=1.20",
    "scipy>=1.7"
]


[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "pytest-mock>=3.6",
    "pytest-cov>=3.0"
]

[project.urls]
"Homepage" = "https://github.com/xuanxu/starmatrix"
"Bug Reports" = "https://github.com/xuanxu/starmatrix/issues"
"Source" = "https://github.com/xuanxu/starmatrix"
"Documentation" = "https://starmatrix.readthedocs.io"
"CI" = "https://github.com/xuanxu/starmatrix/actions"

[project.scripts]
starmatrix = "starmatrix.cli:main"

### Tool configuration ###

[tool.pytest]
python_files = ["test_*.py"]
addopts = ["-v", "--cov=starmatrix"]
testpaths = ["src/starmatrix/tests"]
