[metadata]
name = intergalactic
version = attr: intergalactic.__version__
author = Juanjo Bazán
author_email = hello@juanjobazan.com
license = MIT
description = Galactic elements Q-Matrix generator
keywords =
    galaxies
    models
    astrophysics
url = https://github.com/xuanxu/intergalactic
download_url = https://github.com/xuanxu/intergalactic
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
package_dir=
    =src
packages = find:
install_requires =
    pyyaml>=5.3
    numpy>=1.19
    scipy>=1.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts = intergalactic = intergalactic.cli:main

[options.extras_require]
dev =
    pytest>=6.1
    pytest-mock>=3.3
    pytest-cov>=2.10

[options.package_data]
* =
    sample_input/*

[pycodestyle]
max-line-length = 160
statistics = True
exclude = zzzzz*, build, .git, _build, .pytest_cache, __pycache__, dist

[tool:pytest]
python_files = test_*.py
addopts = -v --cov=intergalactic
testpaths = src/intergalactic/tests