[metadata]
name = starmatrix
version = attr: starmatrix.__version__
author = Juanjo Bazán
author_email = hello@juanjobazan.com
license = MIT
description = Modelling nucleosynthesis of galactic chemical elements using Q-Matrices
keywords =
    galaxies
    models
    astrophysics
url = https://github.com/xuanxu/starmatrix
download_url = https://github.com/xuanxu/starmatrix
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
package_dir=
    =src
packages = find:
install_requires =
    pyyaml>=5.4.1
    numpy>=1.20
    scipy>=1.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts = starmatrix = starmatrix.cli:main

[options.extras_require]
dev =
    pytest>=6.2
    pytest-mock>=3.6
    pytest-cov>=3.0

[options.package_data]
* =
    sample_input/*

[pycodestyle]
max-line-length = 160
statistics = True
exclude = zzzzz*, build, .git, _build, .pytest_cache, __pycache__, dist

[tool:pytest]
python_files = test_*.py
addopts = -v --cov=starmatrix
testpaths = src/starmatrix/tests